tests/error/misc_errors/unreachable_9.err
Error: Unreachable (at $FILE:6:18)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     if False and (x := x + 1):
  |                   ^^^^^^^^^^ This code is not reachable

Guppy compilation failed due to 1 previous error
